<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/horror_background"
    tools:context="com.infinityfraction.amit.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:id="@+id/textView"
        android:textSize="@dimen/heading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#00ff0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_details"
        android:id="@+id/textView2"
        android:layout_marginTop="40dp"
        android:textColor="#ff0000"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/entername"
        android:singleLine="true"
        android:lines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:hint="@string/enterage"
        android:layout_below="@+id/editText"
        android:textColor="@color/white"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:singleLine="true"
        android:lines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <AutoCompleteTextView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/enterlocation"
        android:id="@+id/autoCompleteTextView"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:singleLine="true"
        android:lines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_alignStart="@+id/editText2"
        android:completionThreshold="1"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit"
        android:id="@+id/button"
        android:layout_below="@+id/autoCompleteTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="openListOfStories"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_1"
        android:id="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="italic"
        android:textSize="15dp"
        android:textColor="#f55151" />


</RelativeLayout>
